--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testImplementation 'org.mockito:mockito-core:2.1.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:2.17.1'
+    testCompile 'org.mockito:mockito-core:3.4.2'
+}
+
+test {
+    useJUnitPlatform()
 }
